--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "html-react-parser": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.1.7-beta.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.2.2",
