add eslint_dir, prettier_dir

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -29,5 +29,7 @@ jobs: # list of things to do
       - name: Run linters
         uses: wearerequired/lint-action@v2
         with:
+          eslint_dir: ./app
           eslint: true
+          prettier_dir: ./app
           prettier: true
