--- a/app/package.json
+++ b/app/package.json
@@ -36,6 +36,14 @@
       "react-app/jest"
     ]
   },
+  "lint-staged": {
+    "src/*": "prettier --write",
+    "*.{css,scss}": "stylelint --fix",
+    "*.{ts,tsx}": [
+      "eslint --fix",
+      "git add"
+    ]
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -49,6 +57,15 @@
     ]
   },
   "devDependencies": {
-    "eslint-plugin-react": "^7.30.1"
+    "eslint": "8.3.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "lint-staged": "10.0.7",
+    "prettier": "2.1.2",
+    "stylelint": "14.6.1"
   }
 }
