--- a/app/.stylelintrc.json
+++ b/app/.stylelintrc.json
@@ -2,7 +2,7 @@
   "rules": {
     "indentation": 2,
     "at-rule-no-unknown": null,
-    "block-no-empty": true,
+    "block-no-empty": false,
     "color-no-invalid-hex": true,
     "comment-no-empty": true,
     "declaration-block-no-duplicate-properties": [
