--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -104,7 +104,7 @@
     "import/prefer-default-export": "off",
     "import/no-cycle": ["warn", { "maxDepth": 1 }],
     "jsx-a11y/label-has-associated-control": "off",
-    "no-console": "error",
+    "no-console": "off",
     "react/no-array-index-key": "warn",
     "no-nested-ternary": "warn",
     "import/no-duplicates": "warn",
