--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.27.2",
     "font-awesome": "^4.7.0",
     "html-react-parser": "^3.0.1",
+    "iframe-resizer-react": "^1.1.0",
     "query-string": "^7.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
