--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "query-string": "^7.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-loader-spinner": "^5.1.7-beta.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.2.0",
