--- a/app/.env.development
+++ b/app/.env.development
@@ -1,2 +1,2 @@
 REACT_APP_BACKEND_API=http://192.168.0.38:8000/api
-REACT_APP_MEDIA_URL=`http://192.168.0.38:8000/`
+REACT_APP_MEDIA_URL=http://192.168.0.38:8000/
